# party-hub

./: .gitignore  Cargo.toml  LICENSE.md  README.md  createAuthor.sh  create_guest.sh  create_party.sh  migrate_0.2.0_2026.sql  migrate_2026.sql  migrate_guest_profiles.sql  openapi.yaml
assets/logo/: LICENSE.txt
examples/: test_choice_data.sql  test_choice_types.yaml  test_lorem_data.sql  test_lorem_party.yaml  test_public_data.sql  test_public_party.yaml
pages/de/: auth_de.html  index_de.html  invitation_de.html  manage_de.html  not_found_de.html  public_guest_de.html
pages/en/: auth_en.html  index_en.html  invitation_en.html  manage_en.html  not_found_en.html  public_guest_en.html
src/: db.rs  main.rs
src/auth/: mod.rs
src/guest/: mod.rs
src/invitation/: mod.rs
src/notification/: mod.rs  smtp_client.rs  smtp_server.rs  web_push.rs
src/party/: mod.rs
static/: auth.css  index.css  index.js  index_de.html  index_en.html  invitation.css  invitation.js  main.js  manage.css  manage.js  manifest.json  public_guest.js  style.css  web-push-service-worker.js  web-push.js
