[package]
name = "party-hub"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
rusqlite = { version = "0.37.0", features = ["bundled"] }
r2d2_sqlite = "0.31.0"
r2d2 = "0.8.10"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
time = "0.3"
uuid = { version = "1.0", features = ["v4"] }
web-push = "0.11.0"
chrono = "0.4"
lettre = "0.11"
hickory-resolver = "0.24"
