[package]
edition = "2024"
name = "party-hub"
version = "0.2.0"

[dependencies]
actix-files = "0.6"
actix-web = "4"
chrono = "0.4"
hickory-resolver = "0.24"
lettre = "0.11"
r2d2 = "0.8.10"
r2d2_sqlite = "0.31.0"
rusqlite = {version = "0.37.0", features = ["bundled"]}
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.141"
time = "0.3"
uuid = {version = "1.0", features = ["v4"]}
web-push = "0.11.0"
